fail_crate/tests/empty_rename_on_enum.stderr
error: Empty `rename` is not allowed. If you want enum constructors without prefixes, replace it with `no_prefix`.
 --> fail_crate/tests/empty_rename_on_enum.rs:4:7
  |
4 | #[new(rename = "")]
  |       ^^^^^^^^^^^
