fail_crate/tests/empty_rename_on_enum.rs
use inew::New;

#[derive(New)]
#[new(rename = "")]
enum A {}

fn main() {}
